--- a/resources/view/layouts/navbar.html
+++ b/resources/view/layouts/navbar.html
@@ -12,7 +12,7 @@
         <a href="/retrieval-analytic" class="text-gray-700 hover:text-blue-600">Retrieval Analytic</a>
       </li>
       <li>
-        <a href="/" class="text-gray-700 hover:text-blue-600">Contact Us</a>
+        <a href="/contact" class="text-gray-700 hover:text-blue-600">Contact Us</a>
       </li>
       
     </ul>
