add contact page

--- a/resources/view/contact.html
+++ b/resources/view/contact.html
@@ -2,6 +2,14 @@
 content %}
 <div class="max-w-2xl mx-auto bg-white p-6 rounded-xl shadow">
   <h1 class="text-3xl font-bold mb-4">Sistem Retrieval Analytic Team</h1>
-  <div></div>
+  <div>
+    <ol>
+        <li>1. Naufal</li>
+        <li>2. Tumbuh</li>
+        <li>3. Ujang Selamat</li>
+        <li>4. Imam Muhrozi</li>
+        <li>5. Joy Full</li>
+    </ol>
+  </div>
 </div>
 {% endblock %}
