--- a/resources/view/contact.html
+++ b/resources/view/contact.html
@@ -4,10 +4,10 @@ content %}
   <h1 class="text-3xl font-bold mb-4">Sistem Retrieval Analytic Team</h1>
   <div>
     <ol>
-        <li>1. Naufal</li>
+        <li>1. Naufal Firdaus</li>
         <li>2. Tumbuh</li>
         <li>3. Ujang Selamat</li>
-        <li>4. Imam Muhrozi</li>
+        <li>4. Imam Muhroji</li>
         <li>5. Joy Full</li>
     </ol>
   </div>
