--- a/resources/view/contact.html
+++ b/resources/view/contact.html
@@ -4,11 +4,11 @@ content %}
   <h1 class="text-3xl font-bold mb-4">Sistem Retrieval Analytic Team</h1>
   <div>
     <ol>
-        <li>1. Naufal Firdaus</li>
-        <li>2. Tumbuh</li>
-        <li>3. Ujang Selamat</li>
-        <li>4. Imam Muhroji</li>
-        <li>5. Joy Full</li>
+        <li>1. Naufal Firdaus     20240804017</li>
+        <li>2. Tumbuh             20240804010</li>
+        <li>3. Ujang Selamat      20240804009</li>
+        <li>4. Imam Muhrozi       20240804007</li>
+        <li>5. Joy Full           20240804016</li>
     </ol>
   </div>
 </div>
