Adjust name  position

--- a/resources/view/contact.html
+++ b/resources/view/contact.html
@@ -1,14 +1,15 @@
 {% extends "layouts/base.html" %} {% block title %}Beranda{% endblock %} {% block
 content %}
 <div class="max-w-2xl mx-auto bg-white p-6 rounded-xl shadow">
-  <h1 class="text-3xl font-bold mb-4">Sistem Retrieval Analytic Team</h1>
+  <h1 class="text-3xl font-bold mb-4">SISTEM RETRIEVAL ANALYTIC TEAM</h1>
+  <h2 class="text-3xl font-bold mb-4">KELOMPOK 2 - INFORMASI RETRIEVAL</h2>
   <div>
     <ol>
-        <li>1. Naufal Firdaus     20240804017</li>
-        <li>2. Tumbuh             20240804010</li>
-        <li>3. Ujang Selamat      20240804009</li>
-        <li>4. Imam Muhrozi       20240804007</li>
-        <li>5. Joy Full           20240804016</li>
+        <li>1. Naufal Firdaus - 20240804017</li>
+        <li>2. Tumbuh - 20240804010</li>
+        <li>3. Ujang Selamat - 20240804009</li>
+        <li>4. Imam Muhroji - 20240804007</li>
+        <li>5. JOYFULL M BANJARNAHOR - 20240804016</li>
     </ol>
   </div>
 </div>
