--- a/resources/view/retrieval-analytic-result.html
+++ b/resources/view/retrieval-analytic-result.html
@@ -1,47 +1,46 @@
 {% extends "layouts/base.html" %} {% block title %}Daftar Dokumen{% endblock %} {% block
 content %}
 <div class=" mx-auto bg-white p-6 rounded-xl shadow">
-  <h1 class="text-3xl font-bold mb-4">Daftar Hasil Analisis</h1>
-  <div>
-     {% if message %}
+    <h1 class="text-3xl font-bold mb-4">Daftar Hasil Analisis</h1>
+    <div>
+        {% if message %}
         <div class="mb-4 p-3 bg-green-100 text-green-800 rounded">{{ message }}</div>
-      {% endif %}
-     <div class="my-5 flex justify-end">
-      <a href="/retrieval-analytic"
-              class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
-        Baru
-     </a>
-    </div>
-    <div class="py-4">
-        Kata Kunci : <span class="font-bold">{{ katakunci }}</span> 
-    </div>
-    <table class="min-w-full border border-gray-200 divide-y divide-gray-200">
+        {% endif %}
+        <div class="my-5 flex justify-end">
+            <a href="/retrieval-analytic" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+                Baru
+            </a>
+        </div>
+        <div class="py-4">
+            Kata Kunci : <span class="font-bold">{{ katakunci }}</span>
+        </div>
+        <table class="min-w-full border border-gray-200 divide-y divide-gray-200">
             <thead class="bg-gray-100">
                 <tr>
                     <th class="px-4 py-2 text-left text-sm font-semibold text-gray-700">Nama File</th>
                     <th class="px-4 py-2 text-left text-sm font-semibold text-gray-700">Score BM25</th>
                     <th class="px-4 py-2 text-left text-sm font-semibold text-gray-700">Score TF-IDF</th>
                     <th class="px-4 py-2 text-left text-sm font-semibold text-gray-700">Score LDA</th>
-                    
+
                 </tr>
             </thead>
             <tbody class="bg-white divide-y divide-gray-100">
                 {% for result in results %}
-                    <tr>
-                        <td class="px-4 py-2 text-gray-800">{{ result.filename }}</td>
-                        <td class="px-4 py-2 text-gray-600">{{ result.score }}</td>
-                        <td class="px-4 py-2 text-gray-600">{{ '-'}}</td>
-                        <td class="px-4 py-2 text-gray-600">{{ '-'}}</td>
-                        
-                    </tr>
+                <tr>
+                    <td class="px-4 py-2 text-gray-800">{{ result.filename }}</td>
+                    <td class="px-4 py-2 text-gray-600">{{ result.bm25_score }}</td>
+                    <td class="px-4 py-2 text-gray-600">{{ result.tfidf_score }}</td>
+                    <td class="px-4 py-2 text-gray-600">{{ result.lda_score }}</td>
+
+                </tr>
                 {% endfor %}
                 {% if results|length == 0 %}
-                    <tr>
-                        <td colspan="2" class="px-4 py-4 text-center text-gray-400">Tidak ada file ditemukan.</td>
-                    </tr>
+                <tr>
+                    <td colspan="2" class="px-4 py-4 text-center text-gray-400">Tidak ada file ditemukan.</td>
+                </tr>
                 {% endif %}
             </tbody>
         </table>
-  </div>
+    </div>
 </div>
 {% endblock %}
