--- a/resources/view/contact.html
+++ b/resources/view/contact.html
@@ -9,7 +9,7 @@ content %}
         <li>2. Tumbuh - 20240804010</li>
         <li>3. Ujang Selamat - 20240804009</li>
         <li>4. Imam Muhroji - 20240804007</li>
-        <li>5. JOYFULL M BANJARNAHOR - 20240804016</li>
+        <li>5. Joyfull M Banjarnahor - 20240804016</li>
     </ol>
   </div>
 </div>
