--- a/resources/view/layouts/footer.html
+++ b/resources/view/layouts/footer.html
@@ -1,3 +1,3 @@
 <footer class="text-center text-sm text-gray-500 mt-16 mb-4">
-  © 2025 Sistem Retrieval Analytic By Kelompok II Universitas Esa Unggul. All rights reserved.
+  © 2025 Sistem Retrieval Analytic By Kelompok 2 Universitas Esa Unggul. All rights reserved.
 </footer>
